# MathG

./: .gitignore  CMakeLists.txt  library.h
include/: MathG.h  Matrix.h  Vector.h  mathg.h  matrix.h  vector.h
src/: main.cpp  mathg.cpp
unit_tests/: mathTest.h
